<resources>
    <string name="app_name">SofaTravel</string>

    <string name="discover_title">发现</string>
    <string name="check_in">入住</string>
    <string name="check_out">离开</string>
    <string name="more_filter">更多筛选条件</string>
    <string name="discover_content">青旅名/著名地标搜索</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="fragment_mine_login_or_signup_text_content">注册登录</string>
    <string name="fragment_mine_release_text_content">做房主赚房租</string>
    <string name="fragment_mine_setup_text_content">设置</string>
    <string name="fragment_mine_telnumber_text_content">400 821 3795</string>
    <string name="fragment_mine_suggestion_text_content">意见反馈</string>
    <string name="fragment_mine_share_text_content">分享给好友</string>


    <string name="item_city">城市</string>
    <string name="chengshi">chengshi</string>

    <string name="select_city">选择城市</string>

    <string name="activity_login_or_register_user_name_hint">请输入用户名</string>
    <string name="activity_login_or_register_password_et">请输入密码</string>
    <string name="activity_login_or_register_register_text">注册</string>
    <string name="activity_login_or_register_login_text">登录</string>
    <string name="fragment_mine_money_layout_text">我的房源</string>
    <string name="fragment_mine_collection_layout_text">我的收藏</string>
    <string name="fragment_mine_house_layout_text">发布房源</string>
    <string name="fragment_login_or_register_head_text">注册或登录</string>
    <string name="fragment_mine_house_text">发布房源</string>
    <string name="fragment_mine_share_other_text">分享给好友</string>
    <string name="fragment_mine_money_text">我的房源</string>
    <string name="fragment_mine_collection_text">我的收藏</string>
    <string name="dialog_setup_text">无论多少,期待您的支持</string>
    <string name="dialog_setup_button_text">退出登录</string>

    <string name="text_home">首页</string>
    <string name="text_discover">发现</string>
    <string name="text_search">搜索</string>
    <string name="text_order">订单</string>
    <string name="text_mine">我的</string>
    <string name="city">城市</string>
    <string name="fragment_mine_user_name">username</string>
    <string name="name">名字</string>
    <string name="age">年龄</string>
    <string name="sex">性别</string>
    <string name="job">职业</string>
    <string name="region">地区</string>
    <string name="_100">100</string>
    <string name="response">回复率:</string>
    <string name="price">价格</string>
    <string name="room">房间</string>
    <string name="bed">床</string>
    <string name="context">内容</string>
    <string name="age_a">岁</string>
    <string name="point">·</string>
    <string name="shareSpace">共享空间详情</string>
    <string name="order">直接下单预定一晚</string>
    <string name="washing">洗衣机</string>
    <string name="Toilet">马桶</string>
    <string name="tv">电视</string>
    <string name="wash">卫生间</string>
    <string name="wifi">无线网</string>
    <string name="loser">请求失败,请检查网络设置</string>
    <string name="dis_order">预定</string>
    <string name="dis_mine_order">我的订单</string>
    <string name="dis_sun">共1晚</string>
    <string name="dis_in_info">入住信息</string>
    <string name="dis_bed">床位</string>
    <string name="dis_in_person">入住人</string>
    <string name="dis_name">入住人姓名</string>
    <string name="dis_phone">手机号</string>
    <string name="dis_order_phone">联系号码</string>
    <string name="dis_price">价格</string>
    <string name="dis_sum_price">总价</string>
    <string name="dis_pay">支付方式</string>
    <string name="dis_order_pay">支付宝</string>
    <string name="dis_cancel">取消规则</string>
    <string name="dis_can_not_be_canceled">(不可取消)</string>
    <string name="dis_content_order">订单确认后,不可变更取消预订人取消将扣除全额预付款作为违约金</string>
    <string name="dis_confirm">确认并支付</string>


</resources>
