<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/message_showIv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/home_banner_twoHundred"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher_one" />

        <CheckBox
            android:id="@+id/item_message_detail_collection_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/ten"
            android:layout_marginTop="@dimen/ten"
            android:background="@mipmap/icon_collect"
            android:button="@null" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/message_head"
            android:layout_width="@dimen/fifty"
            android:layout_height="@dimen/fifty"
            android:layout_below="@+id/message_showIv"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_launcher_one" />
    </RelativeLayout>

    <TextView
        android:id="@+id/message_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/ten"
        android:text="@string/name"
        android:textSize="@dimen/textSize_fifteen" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="@dimen/ten">

        <TextView
            android:id="@+id/message_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/five"

            android:text="@string/age" />

        <TextView
            android:id="@+id/message_age_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/five"
            android:layout_marginRight="@dimen/five"
            android:text="@string/age_a" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point" />

        <TextView
            android:id="@+id/message_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/five"
            android:layout_marginRight="@dimen/five"
            android:text="@string/sex" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="·" />

        <TextView
            android:id="@+id/message_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/five"
            android:layout_marginRight="@dimen/five"
            android:text="@string/job" />
    </LinearLayout>

    <TextView
        android:id="@+id/message_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:text="@string/context"
        android:textSize="@dimen/twenty" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="@dimen/ten">

        <TextView
            android:id="@+id/message_region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/five"
            android:layout_marginRight="@dimen/five"
            android:text="@string/region" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="·" />

        <TextView
            android:id="@+id/message_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/five"
            android:layout_marginRight="@dimen/five"
            android:text="@string/room" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="·" />

        <TextView
            android:id="@+id/message_bed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/five"
            android:layout_marginRight="@dimen/five"
            android:text="@string/bed" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/ten">

        <TextView
            android:id="@+id/message_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¥"
            android:textColor="@color/green" />

        <TextView
            android:id="@+id/message_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/message_symbol"
            android:text="@string/price"
            android:textColor="@color/green" />

        <TextView
            android:id="@+id/message_response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/response" />

        <TextView
            android:id="@+id/message_response_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/five"
            android:layout_toRightOf="@id/message_response"
            android:text="@string/_100" />

        <TextView
            android:id="@+id/message_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/message_response_rate"
            android:text="%" />
    </RelativeLayout>
</LinearLayout>