<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:id="@+id/end_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/home_tab_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/text_home" />

                <TextView
                    android:id="@+id/discover_tab_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/text_discover" />

                <TextView
                    android:id="@+id/search_tab_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/text_search" />

                <TextView
                    android:id="@+id/order_tab_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/text_order" />

                <TextView
                    android:id="@+id/mine_tab_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/text_mine" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/up_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/end_layout">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- 首页-->
                    <RadioButton
                        android:id="@+id/home_tab"
                        style="@style/main_aty_tab_margin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/radiobutton_home"
                        android:button="@null"
                        android:gravity="center_horizontal" />

                    <!-- 发现-->

                    <RadioButton
                        android:id="@+id/discover_tab"
                        style="@style/main_aty_tab_margin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/radiobutton_discover"
                        android:button="@null"
                        android:gravity="center_horizontal" />

                    <!-- 搜索-->
                    <RadioButton
                        style="@style/main_aty_tab_margin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@null"
                        android:gravity="center_horizontal" />

                    <!-- 订单-->
                    <RadioButton
                        android:id="@+id/order_tab"
                        style="@style/main_aty_tab_margin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/order_tab"
                        android:layout_weight="1"
                        android:background="@drawable/radiobutton_order"
                        android:button="@null"
                        android:gravity="center_horizontal" />

                    <!-- 我的-->
                    <RadioButton
                        android:id="@+id/mine_tab"
                        style="@style/main_aty_tab_margin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_weight="1"
                        android:background="@drawable/radiobutton_mine"
                        android:button="@null"
                        android:gravity="center_horizontal" />

                </RadioGroup>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/end_layout"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/search_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/bg_search_blue" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/up_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">

                <FrameLayout
                    android:id="@+id/show_fragment_fl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="true"
                    android:fitsSystemWindows="true" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
