<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/five">

        <ImageView
            android:id="@+id/discover_detail_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten"
            android:src="@mipmap/topbar_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/discover_detail_back"
            android:background="@drawable/round">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/dis_detail_location">

                <TextView
                    android:id="@+id/discover_detail_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/ten"
                    android:layout_toRightOf="@id/discover_detail_back"
                    android:textColor="@color/black"
                    android:text="大连" />

                <ImageView
                    android:id="@+id/discover_detail_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/ten"
                    android:layout_toRightOf="@id/discover_detail_location"
                    android:src="@mipmap/icon_qinglv_list_arrow_down_gray" />
            </LinearLayout>

            <View
                android:layout_width="@dimen/one"
                android:layout_height="match_parent"
                android:background="@color/discover_gray" />

            <LinearLayout
                android:id="@+id/discover_detail_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/ten"
                    android:src="@mipmap/icon_qinglv_search_small" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/ten"
                    android:layout_toRightOf="@id/discover_detail_down"
                    android:background="@null"
                    android:gravity="center"
                    android:text="@string/discover_content"
                    android:textColor="@color/discover_gray"
                    android:textSize="@dimen/ten" />
            </LinearLayout>
        </LinearLayout>


        <ImageView
            android:id="@+id/discover_detail_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/ten"
            android:layout_weight="1"
            android:src="@mipmap/icon_to_map" />
    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/one"
        android:background="@color/discover_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/dis_check_in_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/five"
                android:gravity="center"
                android:text="@string/check_in" />

            <TextView
                android:id="@+id/dis_in_time_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="check_in_time"
                android:textColor="@color/green" />
        </LinearLayout>

        <TextView
            android:id="@+id/dis_sum"
            android:layout_width="@dimen/fifty"
            android:layout_height="@dimen/twenty"
            android:layout_margin="@dimen/ten"
            android:background="@drawable/round"
            android:text="共1晚"
            android:textColor="@color/green" />

        <LinearLayout
            android:id="@+id/dis_check_out_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/five"
                android:gravity="center"
                android:text="@string/check_out" />

            <TextView
                android:id="@+id/dis_out_time_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="check_out_time"
                android:textColor="@color/green" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/one"
        android:background="@color/discover_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ten"
        android:gravity="center"
        android:text="@string/more_filter"
        android:textColor="@color/green"
        android:textSize="@dimen/fifteen" />


    <ListView
        android:id="@+id/discover_detail_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>

</LinearLayout>